--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "just api for my manage my web",
   "main": "./dist/app.js",
   "scripts": {
-    "serve-ts" : "npm run copy_static_assets && npm-run-all --parallel build:watch run:watch",
     "start": "npm run copy_static_assets && npm-run-all --parallel build:watch run:watch",
+    "server:watch": "nodemon --watch './' --exec ts-node app/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build:watch": "webpack --watch",
     "run": "node ./dist/app.js",
     "run:watch": "nodemon ./dist/app.js",
     "copy_static_assets": "node ./utils/copyStaticAssets.js",
-    "transplie": "tsc -p ."
   },
   "author": "0length",
   "license": "ISC",
@@ -32,6 +31,7 @@
     "googleapis": "^46.0.0",
     "graphql": "^14.3.1",
     "graphql-passport": "^0.5.0",
+    "iterall": "^1.3.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
     "npm-run-all": "^4.1.5",
@@ -84,6 +84,7 @@
     "react-addons-test-utils": "^15.6.2",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.1",
+    "typescript": "^3.7.4",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-node-externals": "^1.7.2"
