--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "build:watch": "webpack --watch",
     "run": "node ./dist/app.js",
     "run:watch": "nodemon ./dist/app.js",
-    "copy_static_assets": "node ./utils/copyStaticAssets.js"
+    "copy_static_assets": "node ./utils/copyStaticAssets.js",
+    "prisma": "prisma deploy"
   },
   "author": "0length",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@types/styled-components": "^4.4.1",
     "@types/styled-system": "^5.1.4",
     "apollo-server-express": "^2.7.0",
