uploade prisma model and composer

--- a/prisma/docker-compose.yaml
+++ b/prisma/docker-compose.yaml
@@ -6,11 +6,14 @@ services:
     restart: always
     ports:
       - "4466:4466"
+
     environment:
       PRISMA_CONFIG: |
         port: 4466
         # uncomment the next line and provide the env var PRISMA_MANAGEMENT_API_SECRET=my-secret to activate cluster security
         # managementApiSecret: my-secret
+        #enable newversion data movle
+        prototype: true
         databases:
           default:
             connector: mongo
