--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "googleapis": "^46.0.0",
     "graphql": "^14.3.1",
     "graphql-passport": "^0.5.0",
+    "graphql-subscriptions": "^1.1.0",
     "iterall": "^1.3.0",
     "jsonwebtoken": "^8.3.0",
     "mysql2": "^1.6.5",
