--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
   "author": "0length",
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8",
     "@types/styled-components": "^4.4.1",
     "@types/styled-system": "^5.1.4",
     "apollo-server-express": "^2.7.0",
@@ -35,14 +32,10 @@
     "express-rate-limit": "^5.0.0",
     "googleapis": "^46.0.0",
     "graphql": "^14.3.1",
-    "graphql-passport": "^0.5.0",
-    "graphql-subscriptions": "^1.1.0",
+    "http": "0.0.0",
     "iterall": "^1.3.0",
     "jsonwebtoken": "^8.3.0",
-    "mysql2": "^1.6.5",
     "npm-run-all": "^4.1.5",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
     "prisma-client-lib": "^1.34.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -53,13 +46,11 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.2.0",
-    "redux-thunk": "^2.3.0",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "style-loader": "^1.1.2",
     "styled-components": "^4.4.1",
-    "styled-system": "^5.1.4",
-    "uuid": "^3.3.3"
+    "styled-system": "^5.1.4"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
