--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "rxjs-compat": "^6.5.4",
     "style-loader": "^1.1.2",
     "styled-components": "^4.4.1",
-    "styled-system": "^5.1.4"
+    "styled-system": "^5.1.4",
+    "unionize": "1.0.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
