--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/redis": "^2.8.16",
     "@types/redux-logger": "^3.0.7",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
