--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run copy_static_assets && npm-run-all --parallel build:watch run:watch",
     "server:watch": "nodemon --watch './' --exec ts-node app/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack",
     "build:watch": "webpack --watch",
     "run": "node ./dist/app.js",
@@ -58,6 +58,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/csurf": "^1.9.36",
     "@types/express": "^4.17.2",
+    "@types/jest": "^25.1.3",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.1.6",
@@ -80,9 +81,11 @@
     "enzyme-adapter-react-16": "^1.10.0",
     "fs-extra": "^7.0.1",
     "gulp-babel": "^8.0.0",
+    "jest": "^25.1.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.10",
     "react-addons-test-utils": "^15.6.2",
+    "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.1",
     "typescript": "^3.7.4",
