--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "./node_modules",
     "./node_modules/*",
     "./node_modules/@types/node/index.d.ts",
-    "./node_modules/@types/*"
+    "./node_modules/@types/*",
+    "**/*.spec.ts",
 ]
 }
 // {
