--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "npm-run-all": "^4.1.5",
     "prisma-client-lib": "^1.34.10",
     "react": "^16.12.0",
+    "react-datepicker": "^2.14.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^4.3.1",
@@ -54,9 +55,11 @@
     "unionize": "1.0.1"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^2.11.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/csurf": "^1.9.36",
+    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.3",
     "@types/jsonwebtoken": "^8.3.8",
@@ -77,6 +80,7 @@
     "chai": "^4.2.0",
     "concurrently": "^3.6.1",
     "css-loader": "^3.4.0",
+    "date-fns": "^2.11.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
     "fs-extra": "^7.0.1",
