update ui and deploy script ah and to much canges

--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "description": "just api for my manage my web",
   "main": "./dist/app.js",
   "scripts": {
-    "start": "npm run copy_static_assets && npm-run-all --parallel build:watch run:watch",
+    "start": "if-env NODE_ENV=production ?? npm run start:prod || npm run start:dev",
+    "start:prod": "npm run prisma  && npm run build && npm run run",
+    "start:dev": "npm run copy_static_assets && npm-run-all --parallel build:watch run:watch",
     "server:watch": "nodemon --watch './' --exec ts-node app/app.ts",
-    "test": "jest",
-    "build": "webpack",
+    "test": "node --max-old-space-size=2048 ./node_modules/jest/bin/jest.js --detectOpenHandles --colors --maxWorkers=2",
+    "build": "webpack/bin/webpack.js",
+    "pre:prod": "npm run prisma && npm run db-seed && npm run copy_static_assets  && node --max-old-space-size=2048 ./node_modules/webpack/bin/webpack.js",
     "build:watch": "webpack --watch",
     "run": "node ./dist/app.js",
     "run:watch": "nodemon ./dist/app.js",
-    "copy_static_assets": "node ./utils/copyStaticAssets.js",
+    "copy_static_assets": "npx ts-node ./utils/copyStaticAssets.ts",
     "db-seed": "npx ts-node ./utils/seeder.ts",
-    "prisma": "prisma deploy"
+    "prisma": "cd ./prisma && prisma deploy",
+    "deploy": "deploy.sh"
   },
   "author": "0length",
   "license": "ISC",
   "dependencies": {
+    "@types/fs-extra": "^8.1.0",
     "@types/styled-components": "^4.4.1",
     "@types/styled-system": "^5.1.4",
     "apollo-server-express": "^2.7.0",
@@ -33,6 +38,7 @@
     "googleapis": "^46.0.0",
     "graphql": "^14.3.1",
     "http": "0.0.0",
+    "if-env": "^1.0.4",
     "iterall": "^1.3.0",
     "jsonwebtoken": "^8.3.0",
     "npm-run-all": "^4.1.5",
@@ -55,17 +61,16 @@
     "unionize": "1.0.1"
   },
   "devDependencies": {
-    "@types/react-datepicker": "^2.11.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/csurf": "^1.9.36",
-    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.2",
-    "@types/jest": "^25.1.3",
+    "@types/jest": "^25.1.4",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.1.6",
     "@types/react": "^16.9.17",
+    "@types/react-datepicker": "^2.11.0",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
@@ -79,22 +84,26 @@
     "babel-preset-react": "^6.24.1",
     "chai": "^4.2.0",
     "concurrently": "^3.6.1",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.4.0",
     "date-fns": "^2.11.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
     "fs-extra": "^7.0.1",
     "gulp-babel": "^8.0.0",
-    "jest": "^25.1.0",
+    "jest": "^25.2.3",
+    "jest-junit": "^10.0.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.10",
     "react-addons-test-utils": "^15.6.2",
+    "reflect-metadata": "^0.1.13",
     "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.1",
-    "typescript": "^3.7.4",
+    "typescript": "^3.8.3",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "winston": "^3.2.1"
   }
 }
