--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,30 @@
 version: "3"
 services:
+  #  The Application
+  app:
+    container_name: app_me
+    build:
+      context: ./
+      dockerfile: ./docker/app.dockerfile
+    volumes:
+      - ./:/app
+    ports:
+      - "4000:4000"
+    env_file: '.env.prod'
+    environment:
+      - "REDIS_PORT=6379"
+      - "REDIS_HOST=redis"
+      - "REDIS_PASSWORD=redispassword"
   prisma:
     container_name: prisma_app_me
     image: prismagraphql/prisma:1.17
     restart: always
     ports:
-      - "4466:4466"
+      - "4001:4001"
 
     environment:
       PRISMA_CONFIG: |
-        port: 4466
+        port: 4001
         # uncomment the next line and provide the env var PRISMA_MANAGEMENT_API_SECRET=my-secret to activate cluster security
         # managementApiSecret: my-secret
         #enable newversion data movle
@@ -34,6 +49,6 @@ services:
     image: 'redis:4-alpine'
     command: redis-server --requirepass redispassword
     ports:
-      - '6379:6379'
+      - '4003'
 volumes:
   mongo:
