--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "style-loader": "^1.1.2",
     "styled-components": "^4.4.1",
     "styled-system": "^5.1.4",
-    "unionize": "1.0.1"
+    "unionize": "1.0.1",
+    "validatorjs": "^3.18.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -76,6 +77,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redis": "^2.8.16",
     "@types/redux-logger": "^3.0.7",
+    "@types/validatorjs": "^3.15.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
