--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,18 @@
 {
   "exclude": [
+    "./prisma/*",
     "**/*.js",
-    "./prisma/src",
-    "./prisma/src/*/**",
-    "dist",
-    "dist/*",
-    "node_modules",
     "./node_modules",
-    "./node_modules/*",
-    "./node_modules/@types/node/index.d.ts",
-    "./node_modules/@types/*",
+    "dist",
+    "dist/*", 
     "**/*.spec.ts",
+    "**/*.test.ts",
     "./jest.config.js",
-
 ],
   "include": ["./"],
   "compilerOptions": {
     "esModuleInterop": true,
-    "allowJs": true, 
+    "allowJs": false, 
     // "noEmit": true,
     "jsx": "react",  
     "target": "es6",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */
