--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "server:watch": "nodemon --watch './' --exec ts-node app/app.ts",
     "test": "node --max-old-space-size=2048 ./node_modules/jest/bin/jest.js --detectOpenHandles --colors --maxWorkers=2",
     "build": "webpack/bin/webpack.js",
-    "pre:prod": "npm run prisma && npm run db-seed && npm run copy_static_assets  && node --max-old-space-size=2048 ./node_modules/webpack/bin/webpack.js",
+    "pre:prod": "npm run prisma && npm run db-seed && npm run copy_static_assets  && npm run test && node --max-old-space-size=2048 ./node_modules/webpack/bin/webpack.js",
     "build:watch": "webpack --watch",
     "run": "node ./dist/app.js",
     "run:watch": "nodemon ./dist/app.js",
