--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "api-work",
   "version": "1.0.0",
   "description": "just api for my manage my web",
-  "main": "./dist/app.js",
+  "main": "dist/app.js",
   "scripts": {
     "start": "if-env NODE_ENV=production ?? npm run start:prod || npm run start:dev",
     "start:prod": "npm run prisma  && npm run build && npm run run",
-    "start:dev": "npm run copy_static_assets && npm-run-all --parallel build:watch run:watch",
+    "start:dev": "npm run  build-css && npm run copy_static_assets && npm-run-all --parallel build:watch run:watch",
     "server:watch": "nodemon --watch './' --exec ts-node app/app.ts",
     "test": "node --max-old-space-size=2048 ./node_modules/jest/bin/jest.js --detectOpenHandles --colors --maxWorkers=2",
     "build": "webpack/bin/webpack.js",
-    "pre:prod": "npm run prisma && npm run db-seed && npm run copy_static_assets  && npm run test && node --max-old-space-size=2048 ./node_modules/webpack/bin/webpack.js",
+    "build-css": "tailwindcss build view/admin/index.css -o dist/public/css/admin.css",
+    "pre:prod": "npm run prisma && npm run db-seed && npm run  build-css && npm run copy_static_assets  && npm run test && node --max-old-space-size=2048 ./node_modules/webpack/bin/webpack.js",
     "build:watch": "webpack --watch",
     "run": "node ./dist/app.js",
     "run:watch": "nodemon ./dist/app.js",
@@ -22,6 +23,22 @@
   "author": "0length",
   "license": "ISC",
   "dependencies": {
+    "@editorjs/checklist": "^1.1.0",
+    "@editorjs/code": "^2.5.0",
+    "@editorjs/delimiter": "^1.1.0",
+    "@editorjs/editorjs": "^2.18.0",
+    "@editorjs/embed": "^2.3.1",
+    "@editorjs/header": "^2.5.0",
+    "@editorjs/image": "^2.4.2",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link": "^2.2.1",
+    "@editorjs/list": "^1.5.0",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/paragraph": "^2.7.0",
+    "@editorjs/quote": "^2.3.0",
+    "@editorjs/raw": "^2.1.2",
+    "@editorjs/simple-image": "^1.3.3",
+    "@editorjs/table": "^1.2.2",
     "@types/fs-extra": "^8.1.0",
     "@types/styled-components": "^4.4.1",
     "@types/styled-system": "^5.1.4",
@@ -46,6 +63,7 @@
     "react": "^16.12.0",
     "react-datepicker": "^2.14.0",
     "react-dom": "^16.12.0",
+    "react-editor-js": "^1.6.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^4.3.1",
     "redis": "^2.8.0",
@@ -78,12 +96,6 @@
     "@types/redis": "^2.8.16",
     "@types/redux-logger": "^3.0.7",
     "@types/validatorjs": "^3.15.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "chai": "^4.2.0",
     "concurrently": "^3.6.1",
     "cross-env": "^7.0.2",
@@ -99,6 +111,7 @@
     "nodemon": "^1.18.10",
     "react-addons-test-utils": "^15.6.2",
     "reflect-metadata": "^0.1.13",
+    "tailwindcss": "^1.6.2",
     "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.1",
