--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "strict": true,
     "moduleResolution": "node",
     "removeComments": true,
-    "typeRoots": ["node_modules/@types", "@types"]
+    "typeRoots": ["node_modules/@types", "@types"],
+    "noImplicitAny": false
     // "outDir": "dist",
     // "sourceMap": true,
     // "declaration": true
